<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/ic_icon_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etNameProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="Impresora" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="Lorem ipsum" />

                <EditText
                    android:id="@+id/etReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/reference"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="123" />

                <EditText
                    android:id="@+id/etStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/stock"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="5" />

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:text="120000" />

                <EditText
                    android:id="@+id/etBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/brand"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="Hp" />

                <EditText
                    android:id="@+id/etCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="Tecnology" />

                <Button
                    android:id="@+id/btnGuardarProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnGuardarProd" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>